frontend/src/pages/commonStyle.css
.body-section {
    display: flex;
    min-height: 100vh;  
}

.content-page-section {
  flex: 1;
  background-color: #FFFFFF;
  padding: 32px;
}

.title-page-section {
    font-family: var(--font-heading);
    font-size: 1.875rem;
    margin-bottom: 8px;
}

.description-page-section {
    font-size: 0.96rem;
    font-family: var(--font-base);
}

.align-heading {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-right: 16px;
}

.button-shadown {
    box-shadow: 1px 10px 10px 1px rgba(171, 171, 171, 0.2);
    transition: all ease 250ms;
}

.button-shadown:hover > button {
    background: var(--tertiary-color);
    transform: scale(1.05);
}

.input-dashboard-block {
    display: flex;
    gap: 10px;
    align-items: center;
}

@media (max-width: 768px) {
    .content-page-section {
        width: 100%;
    }

    .title-page-section {
        margin-top: 64px;
    }
}

@media (max-width: 425px) {
    .content-page-section {
        padding: 8px;
    }
}

